# myPQ

./: .gitignore  Ascend C.md
ivfpq/: ivfpq.py
pqSearch/: CMakeLists.txt  pqSearch.cpp
pqSearch/utils/: Heap.cpp  Heap.h  heap.cpp  heap.h  ordered_key_value.h
pqTrain/: clustring.h  main.cpp
python/: ann_faiss.py  gmm.py  ivfpq.py
scripts/: calc_recall.py  genPQCodesAndCodewords.py  myHeap.cpp  read_bin.cpp
